--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,7 +14,7 @@ main:
   #- title: "Talks"
    # url: /talks/    
 
-  - title: "Teaching"
+  - title: "实验室成员"
     url: /teaching/    
     
   - title: "Portfolio"
